tests/whiley/valid/test_1680.wyal
define extract_loopinvariant_11(int i) is:
    i >= 0


assert "index out of bounds (negative)":
    forall(int[] ls, int[] r, int i, int i$1, int[] r$1):
        if:
            i == 0
            r == [0;|ls|]
            extract_loopinvariant_11(i$1)
            i$1 < |r$1|
        then:
            i$1 >= 0


